Refined the Job model to optimize ai querries to meet umurava participants
